--- a/src/BarkerCards.css
+++ b/src/BarkerCards.css
@@ -2,7 +2,7 @@
     position: relative;
     background-color: #fff;
     width: 400px;
-    height: 350px;
+    height: 330px;
     padding: 20px;
     bottom: 12vh;
     max-width: 85vw;
@@ -10,6 +10,7 @@
     border-radius: 20px;
     background-size: cover;
     background-position: center;
+    margin: 45px;
 }
 
 .barkerCards__cardContainer {
